--- a/public/styles/site/_home.scss
+++ b/public/styles/site/_home.scss
@@ -6,7 +6,6 @@
     color: white;
     font-size: 50px;
     font-weight: 500;
-    margin-top: 100px;
 }
 
 .white-subtitle {
@@ -76,6 +75,9 @@
 
 #hero {
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    padding-top: $nav-bar-heigth;
     .slide-info {
         text-align: center;
     }
